Added css, changed routing

--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -14,6 +14,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="{$basePath}/img/favicon/favicon-180x180.png" />
 	<link rel="icon" href="{$basePath}/img/favicon/favicon.svg" type="image/svg+xml" />
 	<link rel="manifest" href="{plink Homepage:manifest}" />
+	<link rel="stylesheet" href="{$basePath}/stylesheets/product-list.css">
 
 	{block head}{/block}
 </head>
