--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 </header>
-<div class="container">
+<div>
 
 	{snippet flashes}
 		<div n:foreach="$flashes as $flash" class="alert alert-{$flash->type=='error'?'danger':$flash->type} alert-dismissible mt-2" role="alert">
