--- a/app/FrontModule/Presenters/templates/Product/list.latte
+++ b/app/FrontModule/Presenters/templates/Product/list.latte
@@ -1,13 +1,28 @@
 {varType App\Model\Entities\Product[] $products}
 {block content}
-
-<h1 n:block="title">Nabízené produkty</h1>
-
-<section class="row" n:if="!empty($products)">
-    {foreach $products as $product}
-        <div class="col-md-6 col-lg-4 my-2 card">
-            <a href="{plink Product:show url=>$product->url}" class="h4">{$product->name}</a>
-            {control "productCartForm-$product->productId"}
-        </div>
-    {/foreach}
-</section>
+<div class="products-layout">
+    <div class="products-filter">Kategorie</div>
+    <div class="products-list">
+        <h1 n:block="title">Nabízené produkty</h1>
+        <section class="products-grid" n:if="!empty($products)">
+            {foreach $products as $product}
+                <div class="products-product">
+                    <div class="products-header">
+                        <a href="{plink Product:show url=>$product->url}">{$product->name}</a>
+                    </div>
+                    <a href="{plink Product:show url=>$product->url}">
+                        <img src="{$basePath . $product->getResourceUrl()}" alt="{$product->name}" class="products-image">
+                    </a>
+                    <div class="products-description">{$product->description}</div>
+                    <div class="products-footer">
+                        <div class="products-price">
+                            <div>{$product->price} X</div>
+                            <img src="https://www.clipartmax.com/png/middle/143-1433258_joaquim-grenon-minecraft-emerald-coloring-pages.png" alt="Emerald">
+                        </div>
+                        {control "productCartForm-$product->productId"}
+                    </div>
+                </div>
+            {/foreach}
+        </section>
+    </div>
+</div>
