--- a/app/FrontModule/Components/UserLoginControl/templates/default.latte
+++ b/app/FrontModule/Components/UserLoginControl/templates/default.latte
@@ -5,7 +5,7 @@
       -
       <a href="{link logout!}">odhlásit se</a>
     {else}
-      <a href="{link login!}">přihlásit se</a>
+      <a href="{link login!}" class="green-btn">přihlásit se</a>
     {/if}
   </div>
 {/snippet}
