--- a/app/FrontModule/Presenters/templates/Product/list.latte
+++ b/app/FrontModule/Presenters/templates/Product/list.latte
@@ -17,7 +17,7 @@
                     <div class="products-footer">
                         <div class="products-price">
                             <div>{$product->price} X</div>
-                            <img src="https://www.clipartmax.com/png/middle/143-1433258_joaquim-grenon-minecraft-emerald-coloring-pages.png" alt="Emerald">
+                            <img src="{$basePath}/img/emerald.png" alt="Emerald">
                         </div>
                         {control "productCartForm-$product->productId"}
                     </div>
