--- a/app/FrontModule/Presenters/templates/Product/show.latte
+++ b/app/FrontModule/Presenters/templates/Product/show.latte
@@ -11,7 +11,7 @@
         <div class="cart-layout">
             <div class="product-price">
                 <div>{$product->price} X</div>
-                <img src="https://www.clipartmax.com/png/middle/143-1433258_joaquim-grenon-minecraft-emerald-coloring-pages.png" alt="Emerald">
+                <img src="{$basePath}/img/emerald.png" alt="Emerald">
             </div>
             {control "productCartForm-$product->productId"}
         </div>
