--- a/www/stylesheets/product-list.css
+++ b/www/stylesheets/product-list.css
@@ -25,7 +25,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    padding: 16px 40px;
     gap: 1rem;
 }
 
