--- a/app/FrontModule/Components/CartControl/templates/default.latte
+++ b/app/FrontModule/Components/CartControl/templates/default.latte
@@ -6,7 +6,15 @@
     <a href="{plink Cart:default}">košík</a> je prázdný
   {else}
   {var $cartTotalCount = $cart->getTotalCount();}
-    <a href="{plink Cart:default}">v košíku</a> je {$cartTotalCount} {if $cartTotalCount==1}položka{elseif $cartTotalCount<5}položky{else}položek{/if} za {$cart->getTotalPrice()|number:0,',',' '} Kč
+    <a href="{plink Cart:default}">v košíku</a>
+    {if $cartTotalCount > 1 && $cartTotalCount < 5} jsou
+      {else} je
+    {/if}
+    {$cartTotalCount}
+    {if $cartTotalCount==1}položka
+    {elseif $cartTotalCount<5}položky
+    {else}položek
+    {/if} za {$cart->getTotalPrice()|number:0,',',' '} Kč
   {/if}
 
 </div>
