--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -12,7 +12,7 @@
 
 .login-and-cart-layout {
     display: flex;
-    gap: 0 16px;
+    gap: 0 32px;
 }
 
 .main-link {
@@ -24,9 +24,10 @@
 }
 
 .green-btn {
-    padding: 0.3rem;
+    padding: 0.3rem 0.5rem;
     background-color: var(--defaultGreen);
     color: white;
+    border-radius: 5px;
 }
 
 .green-btn:hover {
@@ -48,6 +49,7 @@ nav {
 .nav-links {
     list-style: none;
     margin: 0;
+    padding: 0;
 }
 
 .nav-links li {
