cart count design

--- a/app/FrontModule/Presenters/templates/Product/list.latte
+++ b/app/FrontModule/Presenters/templates/Product/list.latte
@@ -16,7 +16,7 @@
                     <div class="products-description">{$product->description}</div>
                     <div class="products-footer">
                         <div class="products-price">
-                            <div>{$product->price} X</div>
+                            <div>{$product->price}x</div>
                             <img src="{$basePath}/img/emerald.png" alt="Emerald">
                         </div>
                         {control "productCartForm-$product->productId"}
