--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -3,6 +3,10 @@
     --highLightGreen: #1cbf6c;
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 .header-container {
     display: flex;
     width: 100%;
