--- a/www/stylesheets/product-list.css
+++ b/www/stylesheets/product-list.css
@@ -7,6 +7,7 @@
 
 .products-list {
     padding: 2rem;
+    max-width: 100%;
 }
 
 .products-filter {
@@ -118,4 +119,81 @@
 .products-footer img {
     width: 36px;
     height: 36px;
+}
+
+#form-filter-open {
+    display: none;
+}
+
+#filter-line {
+    display: none;
+}
+
+@media (max-width: 1050px) {
+    .products-layout {
+        grid-template-columns: 1fr;
+    }
+
+    .products-filter.open {
+        border-right: none;
+        padding-top: 0;
+        display: block;
+    }
+
+    .products-filter {
+        display: none;
+    }
+
+    .products-filter h3 {
+        display: none;
+    }
+
+    .products-list {
+        padding: 0.5rem;
+    }
+
+    .products-grid {
+        grid-template-columns: 325px 325px;
+        width: fit-content;
+        margin: 0 auto;
+    }
+
+    .filter-form {
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    #form-filter-open {
+        display: block;
+        padding: 5px 10px;
+        cursor: pointer;
+        background-color: var(--defaultGreen);
+        max-width: fit-content;
+        max-height: 35px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        margin: 0 auto 0.5rem auto;
+    }
+
+    #form-filter-open:after {
+        content: "⇩";
+    }
+
+    #form-filter-open.open:after {
+        content: "⇧";
+    }
+
+    #filter-line {
+        display: block;
+        width: 100%;
+        height: 5px;
+        background-color: grey;
+        align-self: end;
+    }
+}
+
+@media (max-width: 720px) {
+    .products-grid {
+        grid-template-columns: 325px;
+    }
 }
