--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="{$basePath}/stylesheets/main.css">
 	<link rel="stylesheet" href="{$basePath}/stylesheets/product-list.css">
 	<link rel="stylesheet" href="{$basePath}/stylesheets/product-show.css">
+	<link rel="stylesheet" href="{$basePath}/stylesheets/cart.css">
 
 	{block head}{/block}
 </head>
@@ -41,7 +42,7 @@
 	</div>
 	<nav>
 		<ul class="nav-links">
-			<li><a href="#">domů</a></li>
+			<li><a n:href="Product:list">domů</a></li>
 			<p>|</p>
 			<li><a href="#">o nás</a></li>
 			<p>|</p>
