--- a/app/FrontModule/Presenters/templates/Cart/default.latte
+++ b/app/FrontModule/Presenters/templates/Cart/default.latte
@@ -7,4 +7,6 @@
 {control cart:list}
 {if $cart->getTotalCount() > 0}
     {control userDetailsForm}
+{else}
+    <a class="green-btn btn" n:href="Product:list">Zpět k nákupu</a>
 {/if}
