--- a/app/FrontModule/Presenters/templates/User/renewPassword.latte
+++ b/app/FrontModule/Presenters/templates/User/renewPassword.latte
@@ -1,5 +1,6 @@
 {block content}
+<div class="container">
+    <h1 n:block="title">Obnova zapomenutého hesla</h1>
 
-<h1 n:block="title">Obnova zapomenutého hesla</h1>
-
-{control newPasswordForm}
+    {control newPasswordForm}
+</div>
