--- a/app/FrontModule/Presenters/templates/Cart/default.latte
+++ b/app/FrontModule/Presenters/templates/Cart/default.latte
@@ -1,12 +1,13 @@
 {varType App\Model\Entities\Cart $cart}
 
 {block content}
+<div class="container">
+    <h1 n:block="title">Košík</h1>
 
-<h1 n:block="title">Košík</h1>
-
-{control cart:list}
-{if $cart->getTotalCount() > 0}
-    {control userDetailsForm}
-{else}
-    <a class="green-btn btn" n:href="Product:list">Zpět k nákupu</a>
-{/if}
+    {control cart:list}
+    {if $cart->getTotalCount() > 0}
+        {control userDetailsForm}
+    {else}
+        <a class="green-btn btn" n:href="Product:list">Zpět k nákupu</a>
+    {/if}
+</div>
