--- a/app/FrontModule/Presenters/templates/User/login.latte
+++ b/app/FrontModule/Presenters/templates/User/login.latte
@@ -1,8 +1,9 @@
 {block content}
+<div class="container">
+    <h1 n:block="title">Přihlášení uživatele</h1>
 
-<h1 n:block="title">Přihlášení uživatele</h1>
+    {control userLoginForm}
 
-{control userLoginForm}
-
-<a href="{plink forgottenPassword}">Zapomněl(a) jsem heslo</a><br />
-<a href="{plink register}">Registrovat se</a>
+    <a href="{plink forgottenPassword}">Zapomněl(a) jsem heslo</a><br />
+    <a href="{plink register}">Registrovat se</a>
+</div>
