--- a/app/FrontModule/Presenters/templates/User/register.latte
+++ b/app/FrontModule/Presenters/templates/User/register.latte
@@ -1,5 +1,6 @@
 {block content}
+<div class="container"
+    <h1 n:block="title">Registrace uživatele</h1>
 
-<h1 n:block="title">Registrace uživatele</h1>
-
-{control userRegistrationForm}
+    {control userRegistrationForm}
+</div>
