--- a/app/FrontModule/Presenters/templates/Cart/default.latte
+++ b/app/FrontModule/Presenters/templates/Cart/default.latte
@@ -8,6 +8,6 @@
     {if $cart->getTotalCount() > 0}
         {control userDetailsForm}
     {else}
-        <a class="green-btn btn" n:href="Product:list">Zpět k nákupu</a>
+        <a class="green-btn btn mt-2" n:href="Product:list">Zpět k nákupu</a>
     {/if}
 </div>
