--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -14,6 +14,16 @@
     justify-content: space-between;
 }
 
+.company-logo-name {
+    display: none;
+}
+
+@media all and (min-width: 720px) {
+    .company-logo-name {
+        display: block;
+    }
+}
+
 .login-and-cart-layout {
     display: flex;
     gap: 0 32px;
