--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -14,14 +14,98 @@
     justify-content: space-between;
 }
 
-.company-logo-name {
-    display: none;
+.hamburger-and-logo-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
 }
 
-@media all and (min-width: 720px) {
+.hamburger {
+    display: none;
+    position: relative;
+    width: 30px;
+    height: 5px;
+    background: var(--defaultGreen);
+    transition: 0.3s;
+}
+
+.hamburger:before,
+.hamburger:after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    background: var(--defaultGreen);
+    transition: 0.3s;
+}
+
+.hamburger:before {
+    top: -10px;
+    width: 30px;
+}
+
+.hamburger:after {
+    top: 10px;
+    width: 30px;
+}
+
+.toggle-hamburger {
+    display: none;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.hamburger-links {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 100px;
+    left: -400px;
+    padding: 0;
+    transition: 0.3s;
+}
+
+.hamburger-and-logo-wrapper input:checked ~ .hamburger{
+    background: transparent;
+    transform: rotate(-90deg);
+}
+
+.hamburger-and-logo-wrapper input:checked ~ .hamburger:before{
+    top: 0;
+    transform: rotate(-135deg);
+}
+
+.hamburger-and-logo-wrapper input:checked ~ .hamburger:after{
+    top: 0;
+    transform: rotate(-45deg);
+}
+
+.hamburger-and-logo-wrapper input:checked ~ .hamburger-links{
+    left: 0;
+}
+
+
+.company-logo-name {
+    display: block;
+}
+
+@media all and (max-width: 720px) {
+
     .company-logo-name {
+        display: none;
+    }
+
+    .hamburger,
+    .toggle-hamburger {
         display: block;
     }
+     .nav-links {
+         display: none;
+     }
 }
 
 .login-and-cart-layout {
