--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -30,8 +30,12 @@
 			<input type="checkbox" class="toggle-hamburger"/>
 			<div class="hamburger"/>
 			<ul class="hamburger-links">
-				<li><a href="{plink User:login}">přihlásit se</a></li>
-				<li><a href="{link User:facebookLogin}">přihlásit přes facebook</a></li>
+				{if $user->isLoggedIn()}
+					<li><a href="{plink User:logout}">odhlásit se</a></li>
+				{else}
+					<li><a href="{plink User:login}">přihlásit se</a></li>
+					<li><a href="{plink User:facebookLogin}">přihlásit přes facebook</a></li>
+				{/if}
 				<li><a n:href="Product:list">domů</a></li>
 				<li><a href="#">o nás</a></li>
 				<li><a href="#">kontakt</a></li>
