--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -44,7 +44,7 @@
 			</ul>
 			<h1 class="h2 mt-1 ">
 				<a href="{plink Product:list}" class="text-dark main-link">
-					<img src="/~fuxm00/eshop/img/logo.png" height="70px" width="70px">
+					<img class="logo-img" src="/~fuxm00/eshop/img/logo.png" height="70px" width="70px">
 					<div class="company-logo-name">
 						<div>MINE</div>
 						<div>SHOP.CZ</div>
