--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -106,6 +106,10 @@
      .nav-links {
          display: none;
      }
+
+    .logo-img {
+        margin-right: 15px;
+    }
 }
 
 .login-and-cart-layout {
