--- a/app/FrontModule/Presenters/templates/@layout.latte
+++ b/app/FrontModule/Presenters/templates/@layout.latte
@@ -42,7 +42,7 @@
 				<li><a href="#">slevy</a></li>
 				<li><a href="#">premium</a></li>
 			</ul>
-			<h1 class="h2 mt-1 ">
+			<h1 class="h2 mt-1 logo">
 				<a href="{plink Product:list}" class="text-dark main-link">
 					<img class="logo-img" src="/~fuxm00/eshop/img/logo.png" height="70px" width="70px">
 					<div class="company-logo-name">
