--- a/www/stylesheets/product-list.css
+++ b/www/stylesheets/product-list.css
@@ -173,6 +173,7 @@
     }
 
     #form-filter-open {
+        color: white;
         display: block;
         padding: 5px 10px;
         cursor: pointer;
