--- a/www/stylesheets/main.css
+++ b/www/stylesheets/main.css
@@ -23,38 +23,39 @@
 
 .hamburger {
     display: none;
-    position: relative;
-    width: 30px;
-    height: 5px;
+    position: fixed;
+    width: 25px;
+    height: 4px;
     background: var(--defaultGreen);
     transition: 0.3s;
+    z-index: 2;
 }
 
 .hamburger:before,
 .hamburger:after {
     content: "";
     position: absolute;
-    height: 5px;
+    height: 4px;
     background: var(--defaultGreen);
     transition: 0.3s;
 }
 
 .hamburger:before {
-    top: -10px;
-    width: 30px;
+    top: -8px;
+    width: 25px;
 }
 
 .hamburger:after {
-    top: 10px;
-    width: 30px;
+    top: 8px;
+    width: 25px;
 }
 
 .toggle-hamburger {
     display: none;
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    z-index: 1;
+    position: fixed;
+    width: 25px;
+    height: 25px;
+    z-index: 3;
     cursor: pointer;
     opacity: 0;
 }
@@ -63,10 +64,26 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    top: 100px;
+    top: 0;
     left: -400px;
-    padding: 0;
     transition: 0.3s;
+    background: #9b9b9b;
+    height: 100vh;
+    z-index: 1;
+    padding-inline: 1rem;
+    padding-block: 90px;
+}
+
+.hamburger-links li {
+   list-style-type: none;
+   width: 100%;
+   min-height: 3rem;
+}
+
+.hamburger-links li a {
+    color: white;
+    text-decoration: none;
+    width: 100%;
 }
 
 .hamburger-and-logo-wrapper input:checked ~ .hamburger{
@@ -86,6 +103,7 @@
 
 .hamburger-and-logo-wrapper input:checked ~ .hamburger-links{
     left: 0;
+    box-shadow: 20px 0 40px rgba(86, 86, 86, 0.78);
 }
 
 
@@ -107,8 +125,9 @@
          display: none;
      }
 
-    .logo-img {
+    .logo {
         margin-right: 15px;
+        margin-left: 40px;
     }
 }
 
